--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <!-- <link rel="manifest" href="/site.webmanifest" /> -->
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/favicon-192.png" /> -->
     <meta name="theme-color" content="#0ea5e9" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   </body>
 </html>
