--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
       name="description"
       content="Professional content writing services including blogs, SEO writing, copywriting, technical writing, and more. Quality content for businesses and professionals."
     />
+   
     <!-- <link rel="icon" href="/favicon-192.png" /> -->
     <!-- <link rel="manifest" href="/site.webmanifest" /> -->
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/favicon-192.png" /> -->
     <meta name="theme-color" content="#0ea5e9" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
